# oboe

samples/LiveEffect/: build.gradle  local.properties
samples/LiveEffect/src/main/cpp/: CMakeLists.txt  FullDuplexPass.h  FullDuplexStream.cpp  FullDuplexStream.h  LiveEffectEngine.cpp  LiveEffectEngine.h  jni_bridge.cpp  ndk-stl-config.cmake
samples/LiveEffect/src/main/cpp/audio/: AAssetDataSource.cpp  AAssetDataSource.h  DataSource.h  FFMpegExtractor.cpp  GameConstants.h  NDKExtractor.cpp  NDKExtractor.h  Player.cpp  Player.h
samples/LiveEffect/src/main/java/com/google/oboe/samples/liveEffect/: LiveEffectEngine.java  MainActivity.java
samples/RhythmGame/: build.gradle  local.properties
samples/RhythmGame/src/main/cpp/: Game.cpp
